styles for placeholder value of input in header on profile page; fixed gaps over dots in button More

--- a/src/styles/_profile.scss
+++ b/src/styles/_profile.scss
@@ -1080,7 +1080,7 @@
     .more-functions {
       &__btn {
         &:before {
-          margin: 11px auto;
+          margin: 9px auto 12px;
         }
       }
     }
